updated client side engine to support new help page, audio

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,6 +18,7 @@
             <div id="play_area">
             </div>
             <div id="right_panel">
+			  <img id="controls" src="{{ static_url('SPRITES/EXTRA/controls.png') }}"></img>
             </div>
         </div>
     </body>
