Updated server to be modularized, Updated client-side code to incorporate features from offline version. Updated index.html for correct file paths.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,9 +18,8 @@
             <div id="play_area">
             </div>
             <div id="right_panel">
-			  <img id="controls" src="{{ static_url('SPRITES/EXTRA/controls.png') }}"></img>
+			  <img id="controls" src="{{ static_url('SPRITES/extra/controls.png') }}"/>
             </div>
         </div>
     </body>
 </html>
-
