Added functionality for visible weapon toggle.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,10 @@
             </div>
             <div id="right_panel">
 			  <img id="controls" src="{{ static_url('SPRITES/extra/controls.png') }}"/>
+              <img id="pistol" src="{{ static_url('SPRITES/extra/pistol.png') }}"/>
+              <img id="shotgun" src="{{ static_url('SPRITES/extra/shotgun.png') }}"/>
+              <img id="pistol_select" src="{{ static_url('SPRITES/extra/pistol_select.png') }}"/>
+              <img id="shotgun_select" src="{{ static_url('SPRITES/extra/shotgun_select.png') }}"/>
             </div>
         </div>
     </body>
